# agentdiffusion

./: .gitignore  AUTO_REVIEW.md  IMPLEMENTATION_PLAN.md  REVIEW_STATE.json  pyproject.toml
agentdiffusion/: __init__.py
agentdiffusion/constraints/: guidance.py  projection.py  soft_loss.py
agentdiffusion/data/: abides_generator.py  agent_state.py  ashare_10k_agents.py  ashare_10k_rich_orders.py  ashare_l3_dataset.py  ashare_rich_agent_dataset.py  ashare_stock_agents.py  binance_multi_asset.py  crypto_dataset.py  dataset.py  lob_dataset.py  lob_order_dataset.py  news_conditioning.py  preprocessing.py  video_dataset.py
agentdiffusion/diffusion/: ddim.py  ddpm.py  scheduler.py
docs/: ABIDES_REFERENCE.md  mentor_10k_rich_pipeline.dot
scripts/: _check_news.py  _compare_trades.py  _crash_repro.py  _download_itch.sh  _eval_decoder.py  _impact_sim_fix.py  _market_video_fix.py  _market_video_v2.py  _quick_compare.py  _run_lob_bench.py  cache_10k_rich_latents.sh  deploy.sh  eval_both.sh  run_10k_agents.sh  run_10k_rich_stage2.sh  run_ablation.sh  run_ashare_l3.sh  run_baselines.sh  run_causal_groundtruth.sh  run_counterfactual.sh  run_crash_reproduction.sh  run_decoder_price_eval.sh  run_eval.sh  run_full.sh  run_full_eval.sh  run_impact_simulation.sh  run_k_ablation.sh  run_lewm.sh  run_lewm_crypto.sh  run_lewm_crypto_vol.sh  run_lewm_full.sh  run_lob_e2e.sh  run_lob_enhanced.sh  run_market_video.sh  run_multi_asset.sh  run_news_conditioned.sh  run_phase5_constrained.sh  run_phase5_zsproj.sh  run_pipeline.sh  run_rich_agent.sh  (+10 more)
tests/: test_smoke.py
(+45 files in other folders)
